
syntax = "proto3";


message InfosHeader {
    string port_name = 1;
    int32 baud_rate = 2;
}